# density

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
Vault/: APRENDIZADOS.md  PROJETO.md
Vault/01 - Arquitetura/: Arquitetura Hexagonal (Ports e Adapters).md  Camadas, Domínio e Fronteiras.md  Estrutura de Pastas do density.md  Fluxo de Dados no Pipeline RAG.md
Vault/02 - Design Patterns/: Adapter Pattern.md  Factory Method.md  Injeção de Dependência.md  Modelos de Domínio com Pydantic (DTO e Value Object).md  O que são Design Patterns.md  Pipeline (Chain of Responsibility).md  Repository Pattern.md  Strategy Pattern.md
Vault/03 - Banco de Dados/: Design do Schema (documents, chunks, embeddings).md  Full-text Search e Busca Híbrida no Postgres.md  Por que Postgres e pgvector.md  pgvector - tipo vector e operadores de distância.md  Índices ANN - HNSW vs IVFFlat.md
Vault/04 - Linguagens e Ferramentas/: Docker e docker-compose.md  Por que Python.md  Pydantic v2.md  Typer e Rich (o CLI).md  pytest e ruff.md  uv (gerenciador de pacotes).md
Vault/05 - Conceitos RAG/: Avaliação com RAGAS.md  Busca Híbrida e Reciprocal Rank Fusion.md  Busca Vetorial (ANN).md  Chunking.md  Embeddings.md  Grounding e Geração.md  Reranking.md
db/init/: 001_enable_pgvector.sql
src/density/: __init__.py  cli.py  config.py  models.py
tests/: test_config.py  test_models.py
